tests/valid/strict_declared.php
<?php

declare(strict_types=1);

function example(): int
{
  return 42;
}

